2008-01-02  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/reader.R (getReaders): Returns available reader functions.

	* R/termdocmatrix.R (TermDocMatrix): Set new modular constructor
	as default.

2007-12-02  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/stopwords.R (stopwords): Shortened code, removed codetools
	variable warnings.

	* man/: Documentation for showMeta, added an example for tmMap.

	* inst/doc/tm.Rnw: Updated vignette, comments on MS word reader,
	some minor typos fixed.

2007-12-01  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/aobjects.R (showMeta): Added method for pretty printing a
	text document's meta data.

2007-11-29  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R (TextDocCol): Better handling of empty
	arguments.

	* NAMESPACE: Exported readDOC.

	* man/completeStems.Rd: Added an example.

2007-11-18  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/stopwords.R (stopwords): Look up .dat files at every
	call. Allows users to modify stopword .dat files interactively.

2007-11-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/termdocmatrix.R (termFreq): Correct processing of empty
	documents.

2007-10-27  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/: Updated documentation.

2007-10-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/complete.R (completeStems): Completes (heuristically) word
	stems.

	* R/termdocmatrix.R (TermDocMatrix2): New modular
	constructor.

	* NAMESPACE: Exported termFreq.

2007-10-16  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/reader.R (readDOC): Added MS Word reader (using antiword).

2007-10-14  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/weight.R: Weighting functions for TermDocMatrix.

2007-10-13  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/termdocmatrix.R (dimnames, colnames, rownames): Wrapper
	functions for accessing dimension, column, and row names.

	* R/plot.R (plot.TermDocMatrix): Plot correlations between terms.

2007-09-11  Ingo Feinerer  <h0125130@wu-wien.ac.at>
