@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.2-3.15
-Date: 2007-01-02
+Version: 0.2-3.16
+Date: 2007-01-05
 Author: Ingo Feinerer <h0125130@wu-wien.ac.at>
 Maintainer: Ingo Feinerer <h0125130@wu-wien.ac.at>
 Depends: R (>= 2.5.0), filehash, Matrix, methods, Snowball, XML
