@@ -1,3 +1,8 @@
+2008-01-05  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/source.R (CSVSource): Now uses read.csv instead of scan
+	internally.
+
 2008-01-02  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/reader.R (getReaders): Returns available reader functions.
